[package]
name = "firmware"
version = "0.1.0"
authors = ["spxg"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6"
stm32f4xx-hal = { version = "0.8", features = ["stm32f407"] }
sdio_sdhc = { version = "0.2", features = ["filesystem"] }
fat32 = { version = "0.1", features = ["512"] }
esp8266 = { version = "0.1", path = "../esp8266" }
protocol = { version = "0.1", path = "../protocol" }
embedded-hal = "0.2"
nb = "0.1.2"
serde-json-core = "0.1"
serde = { version = "1.0", default-features = false, features = ["derive"] }
alloc-cortex-m = "0.4"